# wyrite

./: Cargo.toml  README.md  dev-db.sh  example.env  insert-some-posts.sh  start-postgres.sh
.sqlx/: query-2660d2df0cc133c349cef05a40cb1a1d4da6304fc059266120201c04ec01fe7f.json  query-a17943a379e9ed952f0bc172264728c73d7247ea58d5252ee2f142efb4c4fe58.json  query-b79701d18e5d1960dce080c5db51b889cd31b8c0cef0708586315cddef05e2d9.json  query-c9d091d5997cf63e93d1568299481cd6ea5c53900f2a3575c1fa5324b61bcb17.json
docs/: chronicle.md  sql-for-clueless-lizards.md  why-am-i-async.md
migrations/: 20240206223506_init.sql  20250307192053_create-posts.sql  20250415170008_create-posts.down.sql  20250415170008_create-posts.up.sql  20250415235626_non-nullable-view.down.sql  20250415235626_non-nullable-view.up.sql  20250418203711_add-slugs.down.sql  20250418203711_add-slugs.up.sql
migrations/2024-01-17-124755_create_posts/: up.sql
src/: api.rs  lib.rs  main.rs  models.rs  schema.rs
