[package]
name = "wyrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "sqlite", "time"] }
time = { version = "0.3.39", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full"] }
